--- a/resources/screen-desktop-small.less
+++ b/resources/screen-desktop-small.less
@@ -64,8 +64,9 @@
 }
 
 #mw-site-navigation {
-	float: left;
-	margin-left: 2em;
+	position: absolute;
+	top: 3.1em;
+	left: 2em;
 
 	.sidebar-chunk {
 		margin: 0 1em 0 0;
@@ -75,8 +76,9 @@
 	}
 }
 #mw-related-navigation {
-	float: right;
-	margin-right: 2em;
+	position: absolute;
+	top: 3.1em;
+	right: 2em;
 
 	.sidebar-chunk {
 		margin: 0 0 0 1em;
